--- a/main.html
+++ b/main.html
@@ -10,6 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form>
+		<label for="name" >Name</label>
+		<input id="name" type="text" minlength="3" maxlength="50" required/>
+		<br>
+		<label for="portfolio">Portfolio</label>
+		<input id="portfolio" type="URL" required/>
+		<br>
+		<label for="favColor">Favourite Color</label>
+		<input id="favColor" type="color"/>
+		<label for="likeness">Likeness</label>
+		<input id="likeness" type="range" min="1" max="100" />
+		<br>
+		<button method="post" type="submit" value="submit">submit</button>
+	</form>
 
 </body>
 
