--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<h1>Feedback Form</h1>
-	<form>
+	<form method="post">
 		<label for="name" >Name</label>
 		<input id="name" type="text" minlength="3" maxlength="50" required/>
 		<br>
@@ -23,7 +23,7 @@
 		<label for="likeness">Likeness</label>
 		<input id="likeness" type="range" min="1" max="100" />
 		<br>
-		<button method="post" type="submit" value="submit">submit</button>
+		<button type="submit" value="submit">submit</button>
 	</form>
 
 </body>
